samples/_failures_safe/1761649009_ada017_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4a7dbe0.c: In function ‘main’:
./samples/SAFE/__tmp_d4a7dbe0.c:164:5: error: expected expression at end of input
  164 |     if (
      |     ^~
./samples/SAFE/__tmp_d4a7dbe0.c:164:5: error: expected declaration or statement at end of input
